--- a/big-event-server/pom.xml
+++ b/big-event-server/pom.xml
@@ -74,9 +74,13 @@
 			<artifactId>aliyun-sdk-oss</artifactId>
 			<version>3.17.4</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
