--- a/big-event-server/src/main/resources/application.yml
+++ b/big-event-server/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
     configuration:
       log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
       map-underscore-to-camel-case: true
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 aliyun:
   oss:
